// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrugPage Important safety information should match snapshot for important safety information section 1`] = `
<section
  aria-labelledby="important-safety-information"
  class="section"
>
  <div
    class="panel panel--primary panel"
  >
    <h2
      id="important-safety-information"
    >
      Important safety information
    </h2>
    <section
      aria-labelledby="important-safety-information-diazepam"
    >
      <h3
        class="visually-hidden"
        id="important-safety-information-diazepam"
      >
        <span
          class="visually-hidden"
        >
          Important safety information 
        </span>
        <span>
          For diazepam
        </span>
      </h3>
      <div
        class="panelContents"
      >
        <p>
          This is very important safety information right here
        </p>
      </div>
    </section>
  </div>
</section>
`;

exports[`DrugPage body Constituent drugs should match snapshot for constituent drugs section 1`] = `
<section
  aria-labelledby="constituent-drugs"
  class="section"
>
  <h2
    id="constituent-drugs"
  >
    Constituent drugs
  </h2>
  <p>
    The properties listed on this page are those particular to the combination only. For the properties of the components please consider the following;
  </p>
  <ul
    aria-labelledby="constituent-drugs"
  >
    <li>
      <a
        href="/drugs/emtricitabine/"
      >
        Emtricitabine
      </a>
    </li>
    <li>
      <a
        href="/drugs/tenofovir-alafenamide/"
      >
        Tenofovir alafenamide
      </a>
    </li>
  </ul>
</section>
`;

exports[`DrugPage body Interactions Multiple interactants should match snapshot for interactions section 1`] = `
<section
  aria-labelledby="interactions"
  class="section"
>
  <h2
    id="interactions"
  >
    Interactions
  </h2>
  <p>
    View interactions for:
  </p>
  <ul
    aria-label="Links to each interactant"
  >
    <li>
      <a
        href="/interactions/abacavir/"
      >
        Abacavir
      </a>
    </li>
    <li>
      <a
        href="/interactions/lamivudine/"
      >
        Lamivudine
      </a>
    </li>
  </ul>
</section>
`;

exports[`DrugPage body Interactions Single interactant should match snapshot for interactions section 1`] = `
<section
  aria-labelledby="interactions"
  class="section"
>
  <h2
    id="interactions"
  >
    Interactions
  </h2>
  <p>
    <a
      href="/interactions/abacavir/"
    >
      View interactions for
       
      <span>
        abacavir
      </span>
    </a>
  </p>
</section>
`;

exports[`DrugPage should match snapshot for graphql query 1`] = `
"
	query ($id: String) {
		bnfDrug(id: { eq: $id }) {
			title
			slug
			primaryClassification {
				title: name
				slug
				order
				drugs {
					title
					slug
				}
			}
			secondaryClassifications {
				title: name
				slug
				order
				drugs {
					title
					slug
				}
			}
			constituentDrugs {
				message
				constituents {
					title
					slug
				}
			}
			allergyAndCrossSensitivity {
				...SimplePot
			}
			breastFeeding {
				...SimplePot
			}
			conceptionAndContraception {
				...SimplePot
			}
			contraIndications {
				...SimplePot
			}
			cautions {
				...SimplePot
			}
			constituentDrugs {
				message
				constituents {
					title
					slug
				}
			}
			directionsForAdministration {
				...SimplePot
			}
			drugAction {
				...SimplePot
			}
			effectOnLaboratoryTests {
				...SimplePot
			}
			exceptionsToLegalCategory {
				...SimplePot
			}
			handlingAndStorage {
				...SimplePot
			}
			hepaticImpairment {
				...SimplePot
			}
			importantSafetyInformation {
				...SimplePot
			}
			indicationsAndDose {
				potName
				slug
				drugClassContent {
					...IndicationsAndDoseContent
				}
				drugContent {
					...IndicationsAndDoseContent
				}
				prepContent {
					...IndicationsAndDoseContent
				}
			}
			interactants {
				title
				slug
			}
			lessSuitableForPrescribing {
				...SimplePot
			}
			medicinalForms {
				initialStatement
				specialOrderManufacturersStatement
				medicinalForms {
					form
					slug
				}
			}
			monitoringRequirements {
				potName
				slug
				drugClassContent {
					contentFor
					monitoringOfPatientParameters
					patientMonitoringProgrammes
					therapeuticDrugMonitoring
				}
				drugContent {
					contentFor
					monitoringOfPatientParameters
					patientMonitoringProgrammes
					therapeuticDrugMonitoring
				}
				prepContent {
					contentFor
					monitoringOfPatientParameters
					patientMonitoringProgrammes
					therapeuticDrugMonitoring
				}
			}
			nationalFunding {
				potName
				slug
				drugClassContent {
					...NationalFundingContent
				}
				drugContent {
					...NationalFundingContent
				}
				prepContent {
					...NationalFundingContent
				}
			}
			palliativeCare {
				...SimplePot
			}
			patientAndCarerAdvice {
				...SimplePot
			}
			preTreatmentScreening {
				...SimplePot
			}
			pregnancy {
				...SimplePot
			}
			prescribingAndDispensingInformation {
				...SimplePot
			}
			professionSpecificInformation {
				...SimplePot
			}
			renalImpairment {
				...SimplePot
			}
			sideEffects {
				...SimplePot
			}
			treatmentCessation {
				...SimplePot
			}
			relatedTreatmentSummaries {
				title
				slug
			}
			unlicensedUse {
				...SimplePot
			}
		}
	}
"
`;
